--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="input-group-prepend">
                 <div class="input-group-text">Update name:</div>
             </div>
-            <input type="text" id="name" class="form-control" required>
+            <input type="text" id="username" class="form-control" required>
             <div class="input-group-append">
                 <input type="submit" class="btn" value="update">
             </div>
@@ -58,6 +58,7 @@
     </form>
 
 </div>
+    <script src="http://cdn.date-fns.org/v1.9.0/date_fns.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-firestore.js"></script>
     <script src="scripts/config.js"></script>
